--- a/main.css
+++ b/main.css
@@ -1,7 +1,8 @@
-body {
-    background-color: #FFFAED;
+html, body {
+    margin: 0;
+    padding: 0;
 }
 
-canvas {
-    border: solid black 3px;
+body {
+    background-color: #66FFFF;
 }
